mealie/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mealie-service
  labels:
    app: mealie
  namespace: personal
spec:
  selector:
    app: mealie
  type: ClusterIP
  ports:
    - targetPort: 9000
      port: 80
