mealie/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-ingress
  namespace: personal
spec:
  rules:
    - host: mealie.yorch.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mealie-service
                port:
                  number: 80
  tls:
    - hosts:
        - mealie.yorch.cloud
      secretName: mealie-certificate
